methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:13: error: '<-' expected but ';' found.
def quart () {twoflowers(Color.red , Color.cyan);droite();for (i<-1 to 4{avance();};gauche();twoflowers(Color.pink , Color.green);gauche();avance();avance();droite();avance;avance();flower(Color.orange)}
                                                                                            ^FlowerCase:13: error: '<-' expected but ';' found.
def quart () {twoflowers(Color.red , Color.cyan);droite();for (i<-1 to 4{avance();};gauche();twoflowers(Color.pink , Color.green);gauche();avance();avance();droite();avance;avance();flower(Color.orange)}
                                                                                                                                 ^FlowerCase:13: error: '<-' expected but ';' found.
def quart () {twoflowers(Color.red , Color.cyan);droite();for (i<-1 to 4{avance();};gauche();twoflowers(Color.pink , Color.green);gauche();avance();avance();droite();avance;avance();flower(Color.orange)}
                                                                                                                                          ^FlowerCase:13: error: '<-' expected but ';' found.
def quart () {twoflowers(Color.red , Color.cyan);droite();for (i<-1 to 4{avance();};gauche();twoflowers(Color.pink , Color.green);gauche();avance();avance();droite();avance;avance();flower(Color.orange)}
                                                                                                                                                   ^FlowerCase:13: error: '<-' expected but ';' found.
def quart () {twoflowers(Color.red , Color.cyan);droite();for (i<-1 to 4{avance();};gauche();twoflowers(Color.pink , Color.green);gauche();avance();avance();droite();avance;avance();flower(Color.orange)}
                                                                                                                                                            ^FlowerCase:13: error: '<-' expected but ';' found.
def quart () {twoflowers(Color.red , Color.cyan);droite();for (i<-1 to 4{avance();};gauche();twoflowers(Color.pink , Color.green);gauche();avance();avance();droite();avance;avance();flower(Color.orange)}
                                                                                                                                                                     ^FlowerCase:13: error: '<-' expected but ';' found.
def quart () {twoflowers(Color.red , Color.cyan);droite();for (i<-1 to 4{avance();};gauche();twoflowers(Color.pink , Color.green);gauche();avance();avance();droite();avance;avance();flower(Color.orange)}
                                                                                                                                                                            ^FlowerCase:13: error: '<-' expected but ';' found.
def quart () {twoflowers(Color.red , Color.cyan);droite();for (i<-1 to 4{avance();};gauche();twoflowers(Color.pink , Color.green);gauche();avance();avance();droite();avance;avance();flower(Color.orange)}
                                                                                                                                                                                     ^FlowerCase:13: error: '<-' expected but '}' found.
def quart () {twoflowers(Color.red , Color.cyan);droite();for (i<-1 to 4{avance();};gauche();twoflowers(Color.pink , Color.green);gauche();avance();avance();droite();avance;avance();flower(Color.orange)}
                                                                                                                                                                                                          ^