methods.flowerpot.FlowerCase.scala.code
moitie();gauche();avance();gauche();for(g<-1 to 8){recule();};droite();for (h<-1 to 5) {avance};droite();moitie();




def moitie() {quart();avance();avance();flower(Color.blue);gauche();avance();avance();droite();quart();for (e<-1 to3){recule();};gauche();recule();recule();droite();}






def quart () {twoflowers(Color.red , Color.cyan);droite();for (i<-1 to 4{avance();};gauche();twoflowers(Color.pink , Color.green);gauche();avance();avance();droite();avance;avance();flower(Color.orange)}


def flower(p:Color){setCouleurBrosse(p);baisseBrosse();avance();avance();recule();gauche(); avance(); recule();recule();avance();setCouleurBrosse(Color.yellow); baisseBrosse();leveBrosse();droite();}

def twoflowers(p:Color,c:Color)
{flower(p);avance();avance();avance();flower(c);for (i<-1 to 5){recule();};}